# Social-Media-Follower-Dashboard

./: .env  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  start.sh
Backend/: .env.example  .env.template  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
Backend/.github/workflows/: django.yml
Backend/api/: urls.py  views.py
Backend/api/v1/: urls.py
Backend/config/nginx/: default.conf  default.conf.template  nginx.conf
Backend/config/uwsgi/: uwsgi.ini
Backend/core/: __init__.py  celery.py  tasks.py  urls.py
Backend/core/settings/: base.py  config.py  development.py  production.py
Backend/core/utils/: analytics.py  cache_keys.py  logger.py  platform_cache.py
Backend/fetchers/: __init__.py  base.py  utils.py
Backend/metrics/: admin.py  apps.py  serializers.py  signals.py  urls.py  views.py  widgets.py
Backend/metrics/management/commands/: debug_fetch.py  diagnose_platforms.py  populate_fetch_scripts.py  trigger_startup_tasks.py
Backend/metrics/migrations/: 0001_initial.py  0002_fetchscript_alter_dailyplatformmetric_options_and_more.py
Backend/metrics/models/: __init__.py  fetch_script.py  other_model.py  platform.py
Backend/metrics/tasks/: __init__.py  refresh.py  registry.py  tasks.py
Backend/scripts/: entrypoint.sh
Frontend/: .env  .env.example  Dockerfile  Dockerfile.prod  README.md  index.html  package-lock.json  tailwind.config.ts  vite.config.ts
Frontend/src/: index.css  main.tsx
Frontend/src/components/: AnalyticsSummary.tsx  Dashboard.tsx  Footer.tsx  Header.tsx  LoadingOverlay.tsx  PlatformCard.tsx  SimpleChart.tsx  SplashScreen.tsx  ThemeProvider.tsx
Frontend/src/components/ui/: slider.tsx
Frontend/src/hooks/: use-api-data.ts  use-splash-screen.ts
Frontend/src/lib/: api-centralized.ts  api-client.ts  api-config.ts  api-service.ts  environment.ts  mock-api.ts  real-api-service.ts
Frontend/src/pages/: Index.tsx
proxy/: Dockerfile  nginx.conf
